// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource 1`] = `
"resource &tfgquot;type&tfgquot; &tfgquot;name&tfgquot;{
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
arg100 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
}
arg101 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
arg100 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
}
}
arg101 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
arg100 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
}
}
arg101 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
arg100 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
}
}
arg102 = {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
arg100 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
}
arg101 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
arg100 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
}
}
arg101 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
arg100 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
}
}
arg101 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
arg100 {
arg0 = &tfgquot;a&tfgquot;
arg1 = [
&tfgquot;b&tfgquot;,
&tfgquot;c&tfgquot;,
&tfgquot;d&tfgquot;
]
arg2 = 0
arg3 = [
1,
2,
3
]
arg4 = true
arg5 = [
false,
true,
false
]
arg6 = type.name.attr
arg7 = [
type.name.attr,
type.name.attr,
type.name.attr
]
arg8 = type.name
arg9 = [
type.name,
type.name,
type.name
]
arg10 = [
&tfgquot;e&tfgquot;,
4,
true,
type.name.attr,
type.name
]
arg11 = arg
arg12 = type.name.attr
arg13 = <<EOT
heredoc
EOT

arg14 = fn(1, 2, 3)
arg15 = fn(type.name.attr, type.name.attr, type.name.attr)
}
}
}
}

"
`;

exports[`toData Data args 1`] = `
"data &tfgquot;type&tfgquot; &tfgquot;name&tfgquot;{
a = &tfgquot;a&tfgquot;
filter {
name = &tfgquot;tag:a&tfgquot;
values = [
&tfgquot;a&tfgquot;
]
}
filter {
name = &tfgquot;tag:b&tfgquot;
values = [
&tfgquot;b&tfgquot;
]
}
arg = &tfgquot;arg&tfgquot;
}

"
`;

exports[`toData Data args 2`] = `
"data &tfgquot;newType&tfgquot; &tfgquot;newName&tfgquot;{
a = &tfgquot;a&tfgquot;
filter {
name = &tfgquot;tag:a&tfgquot;
values = [
&tfgquot;a&tfgquot;
]
}
filter {
name = &tfgquot;tag:b&tfgquot;
values = [
&tfgquot;b&tfgquot;
]
}
arg = &tfgquot;arg&tfgquot;
}

"
`;

exports[`toData Data args overwrite 1`] = `
"data &tfgquot;type&tfgquot; &tfgquot;name&tfgquot;{
arg = &tfgquot;a&tfgquot;
filter {
name = &tfgquot;tag:a&tfgquot;
values = [
&tfgquot;a&tfgquot;
]
}
filter {
name = &tfgquot;tag:b&tfgquot;
values = [
&tfgquot;b&tfgquot;
]
}
}

"
`;

exports[`toData Data args overwrite 2`] = `
"data &tfgquot;newType&tfgquot; &tfgquot;newName&tfgquot;{
arg = &tfgquot;a&tfgquot;
filter {
name = &tfgquot;tag:a&tfgquot;
values = [
&tfgquot;a&tfgquot;
]
}
filter {
name = &tfgquot;tag:b&tfgquot;
values = [
&tfgquot;b&tfgquot;
]
}
}

"
`;

exports[`toData Data args with filter 1`] = `
"data &tfgquot;type&tfgquot; &tfgquot;name&tfgquot;{
filter {
name = &tfgquot;tag:a&tfgquot;
values = [
&tfgquot;a&tfgquot;
]
}
filter {
name = &tfgquot;tag:b&tfgquot;
values = [
&tfgquot;b&tfgquot;
]
}
arg = &tfgquot;arg&tfgquot;
}

"
`;

exports[`toData Data args with filter 2`] = `
"data &tfgquot;newType&tfgquot; &tfgquot;newName&tfgquot;{
filter {
name = &tfgquot;tag:a&tfgquot;
values = [
&tfgquot;a&tfgquot;
]
}
filter {
name = &tfgquot;tag:b&tfgquot;
values = [
&tfgquot;b&tfgquot;
]
}
arg = &tfgquot;arg&tfgquot;
}

"
`;

exports[`toData OK 1`] = `
"data &tfgquot;type&tfgquot; &tfgquot;name&tfgquot;{
filter {
name = &tfgquot;tag:a&tfgquot;
values = [
&tfgquot;a&tfgquot;
]
}
filter {
name = &tfgquot;tag:b&tfgquot;
values = [
&tfgquot;b&tfgquot;
]
}
arg = &tfgquot;arg&tfgquot;
}

"
`;

exports[`toData OK 2`] = `
"data &tfgquot;newType&tfgquot; &tfgquot;newName&tfgquot;{
filter {
name = &tfgquot;tag:a&tfgquot;
values = [
&tfgquot;a&tfgquot;
]
}
filter {
name = &tfgquot;tag:b&tfgquot;
values = [
&tfgquot;b&tfgquot;
]
}
arg = &tfgquot;arg&tfgquot;
}

"
`;
